tests/snapshots/pipenv__dependency_groups_strategy_include_in_dev-2.snap
---
source: tests/pipenv.rs
expression: "fs::read_to_string(project_path.join(\"pyproject.toml\")).unwrap()"
---
[project]
name = ""
version = "0.0.1"
dependencies = ["arrow>=1.2.3"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    { include = "test" },
]
test = ["factory-boy>=3.2.1"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
