tests/snapshots/pipenv__skip_lock-2.snap
---
source: tests/pipenv.rs
expression: "fs::read_to_string(project_path.join(\"pyproject.toml\")).unwrap()"
---
[project]
name = ""
version = "0.0.1"
dependencies = ["arrow>=1.2.3"]

[dependency-groups]
dev = ["mypy>=1.13.0"]
test = ["factory-boy>=3.2.1"]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
